--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "path": "^0.12.7",
     "pug": "^3.0.3"
   }
 }
